betalingen in frontend toegevoegd en models opgkuist

--- a/reizentechnologieApp/resources/sass/app.scss
+++ b/reizentechnologieApp/resources/sass/app.scss
@@ -38,3 +38,7 @@
     background-color: #4286f4;
     border-color: #cbdbf2;
 }
+/* Set custom margins for badges */
+.badge-custom {
+  margin: 4px 2px;
+}
